Copy body structure is now optional.

--- a/Evaluering4D.csproj
+++ b/Evaluering4D.csproj
@@ -59,7 +59,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DVHresult.cs" />
     <Compile Include="Evaluering4D.cs" />
+    <Compile Include="ExportableDVHs.cs" />
     <Compile Include="UserControl1.xaml.cs">
       <DependentUpon>UserControl1.xaml</DependentUpon>
     </Compile>
